tests/NormalTests/paczka1/small_fuzzy/73610559.err
Error in line 4: 9Wz5n0X A727 81,5
Error in line 3: sEQwx S879 157,5
